--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <source src="how_would_you_feel.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-    <img src="1.jpg" alt="Romantic Image" class="img-fluid" style="max-width: 100%; height: auto;">
+    <img src="1.png" alt="Romantic Image" class="img-fluid" style="max-width: 100%; height: auto;">
 
     <div class="button-group">
         <a href="2.html" class="romantic-button me-3">YES</a>
