--- a/5.html
+++ b/5.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container text-center">
-        <img src="5.jpg" alt="Image" class="img-fluid">
+        <img src="5.png" alt="Image" class="img-fluid">
     </div>
 </body>
 </html>
